# dog-breed-explorer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  dbt_docs.yml
dbt/: .user.yml  dbt_test_reporter.py
dbt/dog_breed_explorer/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/dog_breed_explorer/models/marts/: _marts_models.yml  dim_breed.sql  dim_temperaments.sql  fact_breed_metrics.sql
dbt/dog_breed_explorer/models/staging/dog_api/: _dog_api_models.yml  _dog_api_sources.yml  stg_dog_api_raw.sql
dbt/dog_breed_explorer/tests/: expression_is_true.sql
docs/: architecture.md  runbook.md
infra/: main.tf  outputs.tf  variables.tf
ingest/: main.py  requirements.txt
ingest/src/: pipeline.py  runner.py
ingest/tests/: test_pipeline.py
